[style] Quick fix for topography BG on Hero on Chrome
Doesn't look as good as Firefox, alas, but as least it doesn't glitch the whole page 🤷

--- a/src/assets/scss/blocks/_bigboi.scss
+++ b/src/assets/scss/blocks/_bigboi.scss
@@ -2,6 +2,8 @@
 	--ctx-bg: var(--t-bigboi-bg-color);
 	--ctx-color: var(--t-bigboi-text-color);
 
+	position: relative;
+
 	padding-block: var(--size-xl);
 
 	color: var(--ctx-color);
